<?xml version="1.0" encoding="utf-8"?>


<resources>
    <string name="app_name">Budgetbuddy</string>
    <string name="deleted_name">Deleted</string>
    <string name="undo_menuItem">Undo</string>
    <string name="envelopeDetails_name">Envelope</string>
    <string name="envelopeDetails_balance">Balance</string>
    <string name="newEnvelope_menuItem">New envelope</string>
    <string name="colorEnvelope_menuItem">Change color</string>
    <string name="envelopeName_hint">Envelope name</string>
    <string name="paycheck_name">Earn</string>
    <string name="paycheck_menuItem">Earn</string>
    <string name="paycheck_spent">Distributed</string>
    <string name="paycheck_description">Paycheck</string>
    <string name="paycheck_docs">Put your earnings &#8593; to various uses &#8595;</string>
    <string name="earn_name">Earn</string>
    <string name="earn_menuItem">Earn</string>
    <string name="spend_name">Spend</string>
    <string name="spend_menuItem">Spend</string>
    <string name="edit_name">Edit</string>
    <string name="transfer_name">Transfer</string>
    <string name="transfer_menuItem">Transfer</string>
    <string name="transfer_label">to</string>
    <string name="default_envelope_1">Groceries</string>
    <string name="default_envelope_2">Food</string>
    <string name="default_envelope_3">Clothes</string>
    <string name="ok_menuItem">OK</string>
    <string name="description_hint">Description</string>
    <string name="amount_hint">00.00</string>
    <string name="gotIt">&#215;</string>
    <string name="loading">Loading</string>
    <string name="graph_name">Graph</string>
    <string name="graph_menuItem">Graph</string>
    <string name="allTransactions_menuItem">All transactions</string>
    <string name="allTransactions_name">All transactions</string>
    <string name="drawerOpen_button">Open navigation</string>
    <string name="drawerClose_button">Close navigation</string>


    <string name="export_settings_summary">Back up financial data</string>
    <string name="import_name">Importing&#8230;</string>
    <string name="import_settings">Import</string>
    <string name="import_settings_summary">Restore financial data</string>
    <string name="delayed_checkBox">Delayed</string>
    <string name="repeat_checkBox">Repeat</string>
    <string-array name="frequency_array">
	    <item>Daily</item>
	    <item>Weekly</item>
	    <item>Fortnightly</item>
	    <item>Monthly</item>
	    <item>Quarterly</item>
	    <item>Yearly</item>
    </string-array>
    <string name="about_menuItem">How to use</string>
    <string name="about_name">About Budget with Envelopes</string>

    <string name="license">Budgetbuddy version 1.0; 2016 Srima k \n  </string>
    <string name="distri">this logo is used to distribute all your monthly income to respective categories</string>
    <string name="trans">This logo is used to transfer money from one category to another category</string>
    <string name="newmenu">This logo is used to create new category</string>
    <string name="spendmen">This logo is used to save your expences in perticular category</string>
    <string name="ernmen">This logo is used to add money to the respective category</string>
    <string name="color">this is paint brush to add colors to your category to distinguish in graph</string>




</resources>
