<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
<LinearLayout android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content">

    <TextView android:text="@string/license"
              android:textSize="18sp"
              android:id="@+id/aboutText"
              android:background="@color/cardBackground"
              android:layout_marginBottom="@dimen/cardSpacing"
        android:layout_marginLeft="@dimen/cardSpacing"
        android:layout_marginRight="@dimen/cardSpacing"
              android:layout_marginTop="0dp"
              android:padding="@dimen/cardPadding"
              android:autoLink="all"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"/>
<LinearLayout
    android:layout_marginLeft="@dimen/cardSpacing"
    android:layout_marginRight="@dimen/cardSpacing"
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/distribute"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/distri"
        android:textSize="18sp"/>
</LinearLayout>
    <LinearLayout
        android:layout_marginLeft="@dimen/cardSpacing"
        android:layout_marginRight="@dimen/cardSpacing"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/transfer_menuitem"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/trans"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="@dimen/cardSpacing"
        android:layout_marginRight="@dimen/cardSpacing"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/new_menuitem"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/newmenu"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="@dimen/cardSpacing"
        android:layout_marginRight="@dimen/cardSpacing"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/spend_menuitem"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/spendmen"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="@dimen/cardSpacing"
        android:layout_marginRight="@dimen/cardSpacing"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/earn_menuitem"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/ernmen"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="@dimen/cardSpacing"
        android:layout_marginRight="@dimen/cardSpacing"

        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/color_menuitem"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/color"
            android:textSize="18sp"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>

